--- a/src/app/autenticacao/login/components/login/login.component.html
+++ b/src/app/autenticacao/login/components/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<form [formGroup]="form" fxLayoutAlign="center">
+  <mat-list>
+    <mat-list-item>
+      <mat-form-field>
+        <input matInput placeholder="Email" formControlName="email">
+      </mat-form-field>
+    </mat-list-item>
+    <mat-list-item>
+      <mat-form-field>
+        <input type="password" matInput placeholder="Senha" formControlName="senha" >
+      </mat-form-field>
+    </mat-list-item>
+    <span matTooltip="Senha deve conter ao menos 6 caracteres">
+      <mat-icon>help</mat-icon>
+    </span>
+    <mat-list-item fxLayoutAlign="center">
+      <button mat-raised-button color="secondary" [disabled]="form.invalid" (click)="logar()">
+        ENTRAR
+      </button>
+    </mat-list-item>
+    <mat-list-item>
+      <a mat-button color="primary" routerLink="/cadastro-pf">
+        Cadastrar PF
+      </a>
+      <a mat-button color="primary" routerLink="/cadastro-pf">
+        Cadastrar PJ
+      </a>
+    </mat-list-item>
+  </mat-list>
+</form>
